--- a/blueprints/controllers/philips_324131092621/philips_324131092621.yaml
+++ b/blueprints/controllers/philips_324131092621/philips_324131092621.yaml
@@ -3,13 +3,18 @@ blueprint:
   name: Controller - Philips 324131092621 Hue Dimmer switch
   description: |
     # Controller - Philips 324131092621 Hue Dimmer switch
+
     Controller automation for executing any kind of action triggered by the provided Philips 324131092621 Hue Dimmer switch. Allows to optionally loop an action on a button long press.
     Supports deCONZ, ZHA, Zigbee2MQTT.
+
     Automations created with this blueprint can be connected with one or more [Hooks](https://epmatt.github.io/awesome-ha-blueprints/docs/blueprints/hooks) supported by this controller.
     Hooks allow to easily create controller-based automations for interacting with media players, lights, covers and more.
     See the list of [Hooks available for this controller](https://epmatt.github.io/awesome-ha-blueprints/docs/blueprints/controllers/philips_324131092621#available-hooks) for additional details.
+
     📕 Full documentation regarding this blueprint is available [here](https://epmatt.github.io/awesome-ha-blueprints/docs/blueprints/controllers/philips_324131092621).
+
     🚀 This blueprint is part of the **[Awesome HA Blueprints](https://epmatt.github.io/awesome-ha-blueprints) project**.
+
     ℹ️ Version 2021.11.19
   source_url: https://github.com/EPMatt/awesome-ha-blueprints/blob/main/blueprints/controllers/philips_324131092621/philips_324131092621.yaml
   domain: automation
@@ -316,18 +321,18 @@ variables:
       button_down_long: [down_hold]
       button_down_release: [down_long_release]
     zigbee2mqtt:
-      button_on_short: [on_press_release]
-      button_on_long: [on_hold]
-      button_on_release: [on_hold_release]
-      button_off_short: [off_press_release]
-      button_off_long: [off_hold]
-      button_off_release: [off_hold_release]
-      button_up_short: [up_press_release]
-      button_up_long: [up_hold]
-      button_up_release: [up_hold_release]
-      button_down_short: [down_press_release]
-      button_down_long: [down_hold]
-      button_down_release: [down_hold_release]
+      button_on_short: [on-press]
+      button_on_long: [on-hold]
+      button_on_release: [on-hold-release]
+      button_off_short: [off-press]
+      button_off_long: [off-hold]
+      button_off_release: [off-hold-release]
+      button_up_short: [up-press]
+      button_up_long: [up-hold]
+      button_up_release: [up-hold-release]
+      button_down_short: [down-press]
+      button_down_long: [down-hold]
+      button_down_release: [down-hold-release]
   # pre-choose actions for buttons based on configured integration
   # no need to perform this task at automation runtime
   button_on_short: '{{ actions_mapping[integration_id]["button_on_short"] }}'
