--- a/blueprints/controllers/philips_324131092621/philips_324131092621.yaml
+++ b/blueprints/controllers/philips_324131092621/philips_324131092621.yaml
@@ -330,7 +330,7 @@ variables:
       button_up_short: [up_press_release]
       button_up_long: [up_hold]
       button_up_release: [up_hold_release]
-      button_down_short: [off_press_release]
+      button_down_short: [down_press_release]
       button_down_long: [down_hold]
       button_down_release: [down_hold_release]
   # pre-choose actions for buttons based on configured integration
